Display labels in HTML

--- a/calendar_generator/static/calendar_generator/calendar.css
+++ b/calendar_generator/static/calendar_generator/calendar.css
@@ -28,3 +28,9 @@ div.calendar table span.letter {
     font-size: 36px;
     float: left;
 }
+
+div.calendar table span.label {
+    display: block;
+    font-size: 14px;
+    float: left;
+}
