--- a/calendar_generator/templates/calendar_generator/calendar.html
+++ b/calendar_generator/templates/calendar_generator/calendar.html
@@ -1,5 +1,5 @@
-{% extends 'calendar_generator/base.html' %}
-{% load static django_bootstrap_breadcrumbs %}
+{% extends 'calendar_generator/calendar_base.html' %}
+{% load static bootstrap4 django_bootstrap_breadcrumbs %}
 
 {% block title %}Calendar: {{ object.title }}{% endblock %}
 
@@ -9,11 +9,7 @@
     <link rel="stylesheet" href="{% static 'calendar_generator/calendar.css' %}">
 {% endblock %}
 
-{% block breadcrumbs %}
-    {{ block.super }}
 
-    {% breadcrumb calendar.title calendar %}    
-{% endblock %}
 
 {% block content %}
 <h1>
@@ -26,39 +22,40 @@
     <p class="noprint"><a href="{% url 'admin:calendar_generator_calendar_change' object_id=object.id %}">Edit this calendar</a></p>
 {% endif %}
 
-<h2 class="noprint">PDF Links</h2>
+<h2 class="noprint">Monthly Calendars</h2>
 <ul class="noprint">
-    <li>Full year calendar: 
-        {% for i, name in style_presets %}
-            <a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
-            {% if not forloop.last %}
-                &bullet;
-            {% endif %}
-        {% endfor %}
-    </li>
+    {% for style_index, style_name in styles %}
+        <li>
+            <strong>{{ style_name }}</strong>: 
+            {% for layout_index, layout_name in layouts %}
+                <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk layout_index=layout_index style_index=style_index %}">{{ layout_name }}</a>
 
-    <li>Monthly calendars:
-        {% for i, name in style_presets %}
-            <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
-            {% if not forloop.last %}
-                &bullet;
-            {% endif %}
-        {% endfor %}
-    </li>
-
-    <li>Monthly calendars for embedding:
-        {% for i, name in style_presets %}
-            <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}?embedded">{{ name }}</a>
-            {% if not forloop.last %}
-                &bullet;
-            {% endif %}
-        {% endfor %}
-    </li>
-    <li>
-        <a href="#modal-custom-calendar" data-toggle="modal">Custom PDF</a>
-    </li>
+                {% if not forloop.last %}
+                    &bullet;
+                {% endif %}
+            {% endfor %}
+        </li>
+    {% endfor %}
 </ul>
 
+<h2 class="noprint">One-page calendar</h2>
+<ul class="noprint">
+    {% for style_index, style_name in styles %}
+        <li>
+            <strong>{{ style_name }}</strong>: 
+            {% for layout_index, layout_name in layouts %}
+                <a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk layout_index=layout_index style_index=style_index %}">{{ layout_name }}</a>
+
+                {% if not forloop.last %}
+                    &bullet;
+                {% endif %}
+            {% endfor %}
+        </li>
+    {% endfor %}
+</ul>
+    
+<p class="noprint"><a href="{% url 'calendar_generator:custom-pdf' calendar_id=calendar.pk %}">Custom PDF Generator</a></p>
+    
 {% if today_letter %}
     <h2 class="noprint">Today</h2>
     <p class="noprint"><strong>{{ today }}: {{ today_letter }}</strong></p>
@@ -99,20 +96,16 @@
 {% for calendar in calendars %}
 <div class="calendar">
     <h2>{{ calendar.first_date|date:"F Y" }}</h2>
-    <p class="noprint">
-        {% for i, name in style_presets %}
-            <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}">{{ name }}</a>
-            &bullet;
-        {% endfor %}
+    <ul class="noprint">
+        {% for style_index, style_name in styles %}
+            <li><strong>{{ style_name }}</strong>:  
+            {% for layout_index, layout_name in layouts %}
+                <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=style_index layout_index=layout_index year=calendar.year month=calendar.month %}">{{ layout_name }}</a>
 
-        {% for i, name in style_presets %}
-            <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}?embedded">{{ name }} Embedded</a>
-            
-            {% if not forloop.last %}
-                &bullet;
-            {% endif %}
+                {% if not forloop.last %}&bullet;{% endif %}
+            {% endfor %}
         {% endfor %}
-    </p>
+    </ul>
 
     <table class="table table-bordered">
         <thead>
@@ -143,60 +136,6 @@
         </tbody>
     </table>
 </div>
-{% endfor %}
-
-<div class="modal" tabindex="-1" role="dialog" id="modal-custom-calendar">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Generate a Custom Calendar</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form class="noprint" action="{% url 'calendar_generator:custom-pdf' calendar_id=object.id %}">
-                    <div class="form-group">
-                        <label for="customCalendarSize">Size</label>
-                        
-                        <select class="form-control" name="size" id="customCalendarSize">
-                            <option value="print">Print</option>
-                            <option value="embedded">Embedded</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="customCalendarTitle">Title</label>
-                        
-                        <input type="text" class="form-control" name="title" id="customCalendarTitle" value="{{ object.title }}">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="customCalendarColor">Color style</label>
-                        
-                        <select class="form-control" name="style" id="customCalendarColor">
-                            {% for i, name in style_presets %}
-                                <option value="{{ i }}">{{ name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="customCalendarStart">Start date</label>
-                        <input type="date" class="form-control" name="start-date" id="customCalendarStart" value={{ object.start_date|date:"Y-m-d" }}>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="customCalendarEnd">End date</label>
-                        <input type="date" class="form-control" name="end-date" id="customCalendarEnd" value={{ object.end_date|date:"Y-m-d" }}>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Get calendar</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-        
+{% endfor %}      
 
 {% endblock %}
