--- a/calendar_generator/templates/calendar_generator/calendar.html
+++ b/calendar_generator/templates/calendar_generator/calendar.html
@@ -94,47 +94,19 @@
 {% endif %}
 
 {% for calendar in calendars %}
-<div class="calendar">
-    <h2>{{ calendar.first_date|date:"F Y" }}</h2>
-    <ul class="noprint">
+    {% include "calendar_generator/partial/calendar.html" with title=calendar.first_date|date:"F Y" grid=calendar.grid%}
+
+    <div class="noprint">
+        <h2>{{calendar.first_date|date:"F Y"}} Printable</h2>
         {% for style_index, style_name in styles %}
-            <li><strong>{{ style_name }}</strong>:  
+            <p><strong>{{ style_name }}</strong>:
             {% for layout_index, layout_name in layouts %}
                 <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=style_index layout_index=layout_index year=calendar.year month=calendar.month %}">{{ layout_name }}</a>
 
                 {% if not forloop.last %}&bullet;{% endif %}
             {% endfor %}
-        {% endfor %}
-    </ul>
-
-    <table class="table table-bordered">
-        <thead>
-            {% for header in calendar.grid.headers %}
-                <th scope="col">{{ header }}</th>
+            </p>
             {% endfor %}
-        </thead>
-        <tbody>
-            {% for week in calendar.grid.grid %}
-            <tr>
-                {% for day in week %}
-                <td>
-                    {% if day %}
-                        <span class="date">{{ day.date.day }}</span>
-
-                        {% if day.letter %}
-                            {% if day.is_label %}
-                                <span class="label">{{ day.letter }}</span>
-                            {% else %}
-                                <span class="letter">{{ day.letter }}</span>
-                            {% endif %}
-                        {% endif %}
-                    {% endif %}
-                </td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 </div>
 {% endfor %}      
 
