--- a/calendar_generator/templates/calendar_generator/custom.html
+++ b/calendar_generator/templates/calendar_generator/custom.html
@@ -21,8 +21,7 @@
 
 {% include "calendar_generator/partial/calendar.html" with title=title grid=grid %}
 
-<h2>Generate a PDF of the above calendar</h2>
-<p>Note you must preview the calendar before getting a PDF.</p>
+<h2>Generate a PDF</h2>
 
 <div class="noprint">
     {% for style_index, style_name in styles %}
