Add strict origin when cross to fix Google login

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,8 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="msapplication-config" content={% static 'img/icons/browserconfig.xml' %}>
     <meta name="theme-color" content="#ffffff">
-
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
 
